--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   },
   "scripts": {
     "ng": "ng",
-    "heroku-postbuild": "ng build --prod",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
