--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "portfolio",
   "version": "0.0.0",
-  "engines": {
-    "node": "10.15.0",
-    "npm": "6.4.1"
-  },
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
@@ -12,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postbuild": "ng build --aot --prod"
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -58,5 +54,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
+  },
+  "engines": {
+    "node": "10.15.0",
+    "npm": "6.4.1"
   }
 }
